@@ -1,4 +1,33 @@
-MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST lush-0.1.0dave.tar.gz 2072409 RMD160 ff5e41ea64143505a3aa3a2d17c88ed225c15aca SHA1 e3eaf0e09848227e1c724e09ebc0ca5ddf45b58e SHA256 af1f15142d0580951359fbacee3822365720f449b3b16cbe34b11ac48aa6d3e0
+EBUILD lush-0.1.0-r1.ebuild 712 RMD160 431a87795a520a4597b32880d347260ad1f0f547 SHA1 fa44aa9f4fed0cfaf2276350c36197b775209d5d SHA256 dde5f59604fba2e7827236eb1d99ff2461e29f9c7ba16fa5ce7888f837998f12
 MD5 b730233cabf80516c6f62831ada9af5b lush-0.1.0-r1.ebuild 712
-MD5 1e06fb57706f4e744df3297ff9b65b43 ChangeLog 1161
-MD5 30eef944f34eac32e48b3815a3a3285e files/digest-lush-0.1.0-r1 67
+RMD160 431a87795a520a4597b32880d347260ad1f0f547 lush-0.1.0-r1.ebuild 712
+SHA256 dde5f59604fba2e7827236eb1d99ff2461e29f9c7ba16fa5ce7888f837998f12 lush-0.1.0-r1.ebuild 712
+EBUILD lush-0.1.0-r2.ebuild 620 RMD160 4e9ec79355edf0d72e6d6f1efe65b0c7b1b49621 SHA1 46bd5dc8ff73a7e74320fff6d4dc04f5be4a64d9 SHA256 bf291d8f423e83de210d6aa940fbf71a206b7fc32c583a67fea4b28ea551e5cb
+MD5 d551f23d4e4381e5ab583c9317127d6e lush-0.1.0-r2.ebuild 620
+RMD160 4e9ec79355edf0d72e6d6f1efe65b0c7b1b49621 lush-0.1.0-r2.ebuild 620
+SHA256 bf291d8f423e83de210d6aa940fbf71a206b7fc32c583a67fea4b28ea551e5cb lush-0.1.0-r2.ebuild 620
+MISC ChangeLog 1460 RMD160 2d071f865c3c987c5fe98cf0b25e6ee3904be51e SHA1 700cbeee9090cf660c5aa22ea6c24f2f5365930a SHA256 61940cb0d268abf87bcc79518a58783930dd173449207a814d960735eed43d2e
+MD5 6bdd29b91c66e4ab4a0993ee45b4b812 ChangeLog 1460
+RMD160 2d071f865c3c987c5fe98cf0b25e6ee3904be51e ChangeLog 1460
+SHA256 61940cb0d268abf87bcc79518a58783930dd173449207a814d960735eed43d2e ChangeLog 1460
+MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
+RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
+SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
+MD5 2b6c7e68cbafdb921a86b8e2586792de files/digest-lush-0.1.0-r1 247
+RMD160 a1c90706dc2fb2e4acee3703d00ae66333f5a7ef files/digest-lush-0.1.0-r1 247
+SHA256 d8ef21f9b2b501719c2ccd7a5c0bcb989db451f89da534f162ba5e469fa30a19 files/digest-lush-0.1.0-r1 247
+MD5 2b6c7e68cbafdb921a86b8e2586792de files/digest-lush-0.1.0-r2 247
+RMD160 a1c90706dc2fb2e4acee3703d00ae66333f5a7ef files/digest-lush-0.1.0-r2 247
+SHA256 d8ef21f9b2b501719c2ccd7a5c0bcb989db451f89da534f162ba5e469fa30a19 files/digest-lush-0.1.0-r2 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFEwtMZAiZjviIA2XgRAqk1AKD09l/abOz1enpoZ7TEj6ovABBzCwCdERKN
+Jky1gGvU2e9E7ixtNRw3cHE=
+=2PZj
+-----END PGP SIGNATURE-----
