@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/lush
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/lush/ChangeLog,v 1.10 2005/09/17 10:21:52 agriffis Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/lush/ChangeLog,v 1.11 2006/07/23 01:38:26 flameeyes Exp $
+
+*lush-0.1.0-r2 (23 Jul 2006)
+
+  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +lush-0.1.0-r2.ebuild:
+  Revision bump, by removing the useless inheritance of kde and installing in
+  /usr/share instead of in KDE's prefix. Also point to Gentoo mirrors as the
+  original site is now unavailable.
 
   17 Sep 2005; Aron Griffis <agriffis@gentoo.org> lush-0.1.0-r1.ebuild:
   Mark 0.1.0-r1 stable on alpha
